Fixed problem with maven build process - Fixed main class identifier in pom.xml - Made Game interface more explicit (getCommand, checkResponse, addResponse)

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <manifestEntries>
-                                <Main-Class>connor.taylorbrown.coup.textui.TextUI</Main-Class>
+                                <Main-Class>coup.textui.TextUI</Main-Class>
                                 <X-Compile-Source-JDK>${maven.compiler.source}</X-Compile-Source-JDK>
                                 <X-Compile-Target-JDK>${maven.compiler.target}</X-Compile-Target-JDK>
                             </manifestEntries>
